--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/script/how-we-work__slides.js"></script>
 </head>
 <body>
     <header class="header">
@@ -92,7 +93,7 @@
                     <a href="#how-we-work" class="work-steps__step">4 шаг</a>
                 </div>
                 <div class="how-we-work__slides">
-                    <div class="how-we-work__slide">
+                    <div class="how-we-work__slide how-we-work__slide--visible">
                         <div class="how-we-work__slide-left">
                             <h3 class="how-we-work__subheading subheading">Проводим консультацию</h3>
                             <p class="how-we-work__content section-content-font">
@@ -103,43 +104,54 @@
                                 <a href class="button transparent-button-gray how-we-work__button">Договор</a>
                             </div>
                         </div>
+                        <div class="how-we-work__slide-right ">
+                        </div>
+                    </div>
+
+                    <div class="how-we-work__slide">
+                        <div class="how-we-work__slide-left">
+                            <h3 class="how-we-work__subheading subheading">Составляем смету</h3>
+                            <p class="how-we-work__content section-content-font">
+                                Внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований.
+                            </p>
+                            <div class="how-we-work__buttons">
+                                <a href class="button button2 how-we-work__button">Подробнее</a>
+                                <a href class="button transparent-button-gray how-we-work__button">Договор</a>
+                            </div>
+                        </div>
                         <div class="how-we-work__slide-right">
-
-                        </div>
-                    </div>
-
-
-                    <div class="how-we-work__slide">
-                        <h3 class="how-we-work__subheading subheading">Составляем смету</h3>
-                        <p class="how-we-work__content section-content-font">
-                            Внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований.
-                        </p>
-                        <div class="how-we-work__buttons">
-                            <a href class="button button2 how-we-work__button">Подробнее</a>
-                            <a href class="button transparent-button-gray how-we-work__button">Договор</a>
                         </div>
                     </div>
 
                     <div class="how-we-work__slide">
-                        <h3 class="how-we-work__subheading subheading">Привлекаем подрядчиков</h3>
-                        <p class="how-we-work__content section-content-font">
-                            Идейные соображения высшего порядка, а также новая модель организационной деятельности требует анализа прогресса профессионального сообщества. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнить важные задания по разработке прогресса профессионального сообщества.
-                        </p>
-                        <div class="how-we-work__buttons">
-                            <a href class="button button2 how-we-work__button">Подробнее</a>
-                            <a href class="button transparent-button-gray how-we-work__button">Договор</a>
+                        <div class="how-we-work__slide-left">
+                            <h3 class="how-we-work__subheading subheading">Привлекаем подрядчиков</h3>
+                            <p class="how-we-work__content section-content-font">
+                                Идейные соображения высшего порядка, а также новая модель организационной деятельности требует анализа прогресса профессионального сообщества. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнить важные задания по разработке прогресса профессионального сообщества.
+                            </p>
+                            <div class="how-we-work__buttons">
+                                <a href class="button button2 how-we-work__button">Подробнее</a>
+                                <a href class="button transparent-button-gray how-we-work__button">Договор</a>
+                            </div>
+                        </div>
+                        <div class="how-we-work__slide-right">
                         </div>
                     </div>
 
                     <div class="how-we-work__slide">
-                        <h3 class="how-we-work__subheading subheading">Инспектируем все этапы работ</h3>
-                        <p class="how-we-work__content section-content-font">
-                            Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет.
-                        </p>
-                        <div class="how-we-work__buttons">
-                            <a href class="button button2 how-we-work__button">Подробнее</a>
-                            <a href class="button transparent-button-gray how-we-work__button">Договор</a>
+                        <div class="how-we-work__slide-left">
+                            <h3 class="how-we-work__subheading subheading">Инспектируем все этапы работ</h3>
+                            <p class="how-we-work__content section-content-font">
+                                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от дальнейших направлений развития. Разнообразный и богатый опыт говорит нам, что новая модель организационной деятельности говорит о возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет.
+                            </p>
+                            <div class="how-we-work__buttons">
+                                <a href class="button button2 how-we-work__button">Подробнее</a>
+                                <a href class="button transparent-button-gray how-we-work__button">Договор</a>
+                            </div>
                         </div>
+                        <div class="how-we-work__slide-right">
+                        </div>
+
                     </div>
                 </div>
             </div>
